Added filter in user table

--- a/templates/dashboard/home.html
+++ b/templates/dashboard/home.html
@@ -11,7 +11,7 @@
   <div class="container mt-3 mb-5 pb-5">
     <h5>Users ({{ all_users|length }})</h5>
     {{ notification }}
-    <table class="table table-bordered table-responsive-md small">
+    <table id="report_table" class="table table-bordered table-responsive-md small diplay">
       <thead>
       <tr>
         <th>Email</th>
@@ -37,4 +37,35 @@
 {% endblock %}
 
 {% block scripts %}
+  <script type="text/javascript">
+    $(document).ready(function () {
+      var table = $("#report_table").DataTable({
+          "iDisplayLength": 20
+        });
+
+      table.columns().flatten().each(function (colIdx) {
+        // Create the select list and search operation
+        var select = $('<select />')
+          .appendTo(
+            table.column(colIdx).footer()
+          )
+          .on('change', function () {
+            table
+              .column(colIdx)
+              .search($(this).val())
+              .draw();
+          });
+
+        // Get the search data for the first column and add to the select list
+        table
+          .column(colIdx)
+          .cache('search')
+          .sort()
+          .unique()
+          .each(function (d) {
+            select.append($('<option value="' + d + '">' + d + '</option>'));
+          });
+      });
+    })
+  </script>
 {% endblock %}
