--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -67,6 +67,9 @@
         integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
         crossorigin=""></script>
 
+<script type="text/javascript"
+          src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
+
 <script type="text/javascript">
   $(document).ready(function () {
     $('#sidebarCollapse').on('click', function () {
