--- a/templates/dashboard/home.html
+++ b/templates/dashboard/home.html
@@ -35,7 +35,7 @@
     </div>
   </div>
   <div class="container mt-3 mb-5 pb-5">
-    <h5>Users ({{ all_users|length }})</h5>
+    <h5>Users ({{ users|length }})</h5>
     {{ notification }}
     <table id="report_table" class="table table-bordered table-responsive-md small diplay">
       <thead>
