Added fireout logo

--- a/templates/components/nav.html
+++ b/templates/components/nav.html
@@ -3,8 +3,8 @@
   <div class="container">
     <nav class="navbar navbar-expand-md">
       <div class="navbar-brand">
-        <a href="https://pilantropo.com">
-          <img class="" src="{% static 'media/pilantropo-logo-pink.png' %}" alt="FireOut Logo">
+        <a href="dashboard_login_view">
+          <img class="" src="{% static 'img/fireout-6.png' %}" alt="FireOut Logo">
         </a>
       </div>
     </nav>
