--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -36,6 +36,25 @@
   <title>{{ page_title }}</title>
 </head>
 <body>
+<!-- Modal -->
+<div class="modal fade" id="alertModal" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Modal Header</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+      <div class="modal-body">
+        <p id="reportDetail"></p>
+      </div>
+      <div class="modal-footer">
+        <a id="reportLink" class="btn btn-default" href="#">Close</a>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="wrapper">
   {% include 'components/sidebar.html' %}
   <div id="content">
@@ -67,7 +86,7 @@
         crossorigin=""></script>
 
 <script type="text/javascript"
-          src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
+        src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
 
 <script type="text/javascript">
   $(document).ready(function () {
