--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -50,7 +50,7 @@
         <p id="reportDetail"></p>
       </div>
       <div class="modal-footer">
-        <a id="reportLink" class="btn btn-default" href="#">Close</a>
+        <a id="reportLink" class="btn btn-outline-primary" href="#" target="_blank">View Details</a>
       </div>
     </div>
   </div>
